[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cq"
version = "0.1.0"
description = "A lightweight task queue/buffer for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
cq = "cq.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cq*"]
